@@ -1,3 +1,7 @@
+BEGIN {
+	require 5.006;
+}
+
 use ExtUtils::MakeMaker;
 
 WriteMakefile(
